feat: complete html and css

--- a/03-ts-demo/src/index.html
+++ b/03-ts-demo/src/index.html
@@ -5,6 +5,33 @@
     <title>贪吃蛇</title>
   </head>
   <body>
-    <div id="myId">测试</div>
+
+    <div id="main">
+      <!--  舞台   -->
+      <div id="stage">
+        <div id="snake">
+          <!-- 蛇内部的div 表示蛇的各个部分 -->
+          <div></div>
+        </div>
+
+        <div id="food">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+      </div>
+      <!--  计分牌   -->
+      <div id="score-panel">
+        <div>
+          SCORE: <span id="score">0</span>
+        </div>
+        <div>
+          LEVEL: <span id="level">1</span>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
